--- a/quiz.html
+++ b/quiz.html
@@ -9,6 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Luckiest+Guy&family=Pixelify+Sans:wght@500&family=Public+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@1,500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3651e21373.js"></script>
+
+    <!-- Swiper JS -->
+    <link rel="stylesheet" href="styles/swiper-bundle.min.css">
+
 </head>
 <body>
     <section class="questionnaire section" style="display: none;">
@@ -255,8 +259,110 @@
     </section>
 </section>
 
+<section class="results-section" style="display: none;">
+    <div class="made-for-section" style="background: url('assets/made-for.jpg') center/cover no-repeat">
+        <div class="made-for-text">
+            <h1>Made for</h1><br>
+            <h5>`Person name`</h5>
+        </div>
+    </div>
+    <h1>Here are your results</h1>
+    <div class="slide-container swiper">
+        <div class="slide-content">
+            <div class="card-wrapper swiper-wrapper">
+                <div class="card swiper-slide">
+                    <div class="image-content">
+                        <span class="overlay" id="overlay-1"></span>
+
+                        <div class="card-image">
+                            <img src="assets/pill1.webp" alt="" class="card-img">
+                        </div>
+                    </div>
+
+                    <div class="card-content">
+                        <h2 class="name">Vitamin A</h2>
+                        <p class="description">Vitamin Desc</p>
+
+                        <a href="" class="button" id="btn1" target="_blank">Learn More</a>
+                    </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="image-content">
+                        <span class="overlay" id="overlay-2"></span>
+
+                        <div class="card-image">
+                            <img src="assets/pill2.webp" alt="" class="card-img">
+                        </div>
+                    </div>
+
+                    <div class="card-content">
+                        <h2 class="name">Vitamin B</h2>
+                        <p class="description">Vitamin Desc</p>
+
+                        <a href="" class="button" id="btn2" target="_blank">Learn More</a>
+                    </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="image-content">
+                        <span class="overlay" id="overlay-3"></span>
+
+                        <div class="card-image">
+                            <img src="assets/pill3.webp" alt="" class="card-img">
+                        </div>
+                    </div>
+
+                    <div class="card-content">
+                        <h2 class="name">Vitamin C</h2>
+                        <p class="description">Vitamin Desc</p>
+
+                        <a href="" class="button" id="btn3" target="_blank">Learn More</a>
+                    </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="image-content">
+                        <span class="overlay" id="overlay-4"></span>
+
+                        <div class="card-image">
+                            <img src="assets/pill4.webp" alt="" class="card-img">
+                        </div>
+                    </div>
+
+                    <div class="card-content">
+                        <h2 class="name">Vitamin D</h2>
+                        <p class="description">Vitamin Desc</p>
+                        <a href="" class="button" id="btn4" target="_blank">Learn More</a>
+                    </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="image-content">
+                        <span class="overlay" id="overlay-5"></span>
+
+                        <div class="card-image">
+                            <img src="assets/pill5.webp" alt="" class="card-img">
+                        </div>
+                    </div>
+
+                    <div class="card-content">
+                        <h2 class="name">Vitamin E</h2>
+                        <p class="description">Vitamin Desc</p>
+                        <a href="" class="button" id="btn5" target="_blank">Learn More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="swiper-button-next swiper-navBtn"></div>
+        <div class="swiper-button-prev swiper-navBtn"></div>
+        <div class="swiper-pagination"></div>
+    </div>
+</section>
+
     <!-- JQuery for animations -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
+    <!-- Swiper JS -->
+    <script src="JS/swiper-bundle.min.js"></script>
+
     <script type="module" src="JS/questions.js"></script>
     <script type="module" src="JS/questionnaire.js"></script>
     <script type="module" src="JS/quiz.js"></script>
